2015-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/icon.c (ReadIconImage): Limit icon image allocation size.

2015-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/icon.c (ReadIconImage): Removed all of the
	previously-existing DIB reading code from icon.c and use new
	"ICODIB" reader to read DIB icons, or the PNG reader to read PNG
	icons.

	* coders/dib.c (ReadDIBImage): Added an "ICODIB" coder for
	internal use which reads a Windows BMP 3 DIB followed by a Windows
	ICO alpha mask.  This allows existing DIB code to be used to read
	ICO directory entries.

2015-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/icon.c: The Windows ICO reader is now more robust.  Still
	a work in progress since some files still can not be read or read
	incorrectly.

2015-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (ListMagickResourceInfo): "kilo" for binary
	prefixes is supposed to be "Ki".

	* magick/utility.c (FormatSize): "kilo" for binary prefixes is
	supposed to be "Ki".

2015-01-01  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Use WidthResource and HeightResource instead
	of fixed 1-million limit for rows and columns.

2015-01-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (FormatSize): Add 'i' to value range
	identifiers since these are all in units of 2^10 rather than 1000.

	* magick/pixel_cache.c (CheckImagePixelLimits): Fix typo and
	produce an informative error message.

	* magick/resource.c: Added support for Image width and height
	pixels resource limits.

	* magick/resource.h (ResourceType): New resource enumerations
	WidthResource and HeightResource.

	* magick/enum_strings.c (StringToResourceType): Added support for
	parsing '-limit Width' and '-limit Height'.

	* magick/pixel_cache.c (CheckImagePixelLimits): New function to
	test image to see if it exceeds pixels limits.
